minimumAbsoluteDifference